--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -14,12 +14,6 @@
   box-sizing: border-box;
   font-family: "Work Sans", sans-serif;
 }
-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  object-position: center;
-}
 
 /* ----- Header Section Start Here ----- */
 
@@ -84,16 +78,69 @@ img {
 
 /* Banner Section Start */
 .banner {
-   max-width: 1920px;
-   min-height: 700px;
-   margin:  0 auto;
-   background-image: url(../images/bg_banner.png);
-   background-repeat: no-repeat;
-   background-position: left top;background-size: contain;
+  max-width: 1920px;
+  min-height: 700px;
+  margin: 0 auto;
+  background-image: url(../images/bg_banner.png);
+  background-repeat: no-repeat;
+  background-position: left top;
+  background-size: contain;
 }
 
 .banner-container {
-   max-width: 1440px;
-   margin: 0 auto;
+  max-width: 1440px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.banner-title {
+  font-size: 3rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  color: var(--text-black);
+}
+
+.banner-hero-text {
+  font-size: 6rem;
+  font-weight: 800;
+  color: transparent;
+  background: linear-gradient(180deg, #f948b2 0%, #8758f1 100%);
+  -webkit-background-clip: text;
+}
+.banner-list-text-1,
+.banner-list-text-2,
+.banner-list-text-3 {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 10px;
+  font-size: 1.25rem;
+  margin: 1rem 0;
+}
+.banner-button {
+   margin-top: 2.56rem;
+   display: flex;
+   gap: 1.5rem;
+}
+.banner-button > a {
+   text-decoration: none;
+}
+.btn-primary {
+   padding: 1.31rem 2.5rem;
+   font-size: 1.25rem;
+   font-weight: 600;
+   color: var(--text-white);
+   text-transform: uppercase;
+   border: none;
+   border-radius: 3rem;
+}
+
+.banner-button-1 {
+   background-color: var(--bg-color-pink);
+}
+.banner-button-2 {
+   background-color: var(--button-bg-blue);
 }
 /* Banner Section End */
