--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -1,10 +1,8 @@
 /* ---- Mobile device max-width:  */
 @media screen and (max-width: 576px) {
-  body {
-    padding: 0 10px;
-  }
   /* Nave Menu */
   .nav-container {
+    margin: 0 10px;
     text-align: center;
     flex-direction: column;
   }
@@ -27,7 +25,6 @@
 
   /* Banner section */
   .banner {
-    margin-bottom: 50px;
     background-image: none;
   }
   .banner-container {
@@ -65,14 +62,92 @@
     padding: 1rem 2rem;
     font-size: 1rem;
   }
+
+  /*----- Main Content Section Start Here----- */
+  /* We are gammer Section */
+  .we-are-gamer-banner {
+    background: none;
+    padding: 0;
+  }
+  .gamer-banner-container {
+    width: 100%;
+    flex-direction: column;
+  }
+  .gamer-banner-image {
+    padding: 0 8%;
+  }
+  .gamer-banner-content-container {
+    flex: 0 0 auto;
+    text-align: center;
+    padding: 0 4%;
+  }
+  .gamer-banner-title {
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+  }
+  .gamer-banner-description {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+    padding: 0 8%;
+  }
+  .our-purpose {
+    font-size: 1.2rem;
+    line-height: 2rem;
+  }
+  .our-purpose > span {
+    font-size: 1.2rem;
+  }
+/*  game Funy Video Section */
+.video-contents {
+  justify-content: center;
+}
+
+  /* Play Instant + play Online Section  */
+  .play-instant-section-container {
+    margin-bottom: 100px;
+    padding: 0 4%;
+
+  }
+  .play-instant-section-content {
+    flex-direction: column;
+    gap: 50px;
+    
+  }
+  .play-online-section-content {
+    flex-direction: column-reverse;
+    gap:50px ;
+  }
+  .play-instant-section-content, .play-online-section-content {
+    text-align: center;
+  }
+  .play-instant-text-content, .play-online-text-content {
+    text-align: center;
+  flex: 0 0 auto;
+  }
+  .play-online-title br {
+    display: none;
+  }
+  .play-instant-images, .play-online-images {
+    flex: 0 0 auto;
+
+  }
+  .instant-image-1, .online-image-1{
+    width: 60%;
+  }
+  .instant-image-2{
+    width: 25%;
+    left: 10%;
+  }
+  
+  .online-image-2 {
+    width: 25%;
+    right: 10%;
+  }
+
 }
 
 /* ------- Small Tab max-width: 768px */
 @media screen and (min-width: 576.2px) and (max-width: 768px) {
-  body {
-    padding: 0 15px;
-  }
-
   /* Nave Menu */
   .nav-container {
     text-align: center;
@@ -107,6 +182,7 @@
     width: 100%;
     flex: 0 0 50%;
     padding: 50px 0px;
+    margin-left: 10%;
     background-image: url(../images/bg_banner.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
@@ -125,13 +201,38 @@
   .banner-image > img {
     width: 100%;
   }
+  /*----- Main Content Section Start Here----- */
+
+  /* We are gammer Section */
+  .we-are-gamer-banner {
+    background: none;
+    padding: 0;
+  }
+  .gamer-banner-container {
+    width: 100%;
+    flex-direction: column;
+  }
+  .gamer-banner-image {
+    padding: 0 8%;
+  }
+  .gamer-banner-description {
+    padding: 0 8%;
+  }
+  .gamer-banner-content-container {
+    flex: 0 0 auto;
+    text-align: center;
+    padding: 0 5%;
+  }
+
+  /*  game Funy Video Section */
+.video-contents {
+  justify-content: center;
+}
+  
 }
 
 /* large Tab Max-width: 992px */
 @media screen and (min-width: 768.2px) and (max-width: 992px) {
-  body {
-    padding: 0 20px;
-  }
   /* NAv Menu */
   .nav-container {
     text-align: center;
@@ -150,7 +251,7 @@
   /* Banner Section */
 
   .banner {
-    margin-bottom: 50px;
+    min-height: auto;
     background-image: none;
   }
   .banner-content-container {
@@ -188,14 +289,44 @@
     padding: 1rem 1.8rem;
     font-size: 1rem;
   }
+  /*----- Main Content Section Start Here----- */
+  /* We are gamer Section */
+  .gamer-banner-image {
+    flex: 0 0 50%;
+  }
+  .gamer-banner-content-container {
+    flex: 0 0 50%;
+    text-align: right;
+    padding: 0 5%;
+  }
+  .gamer-banner-title {
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+  }
+  .gamer-banner-description {
+    font-size: 1rem;
+    margin-bottom: 1rem;
+  }
+  .our-purpose {
+    font-size: 1.2rem;
+    line-height: 2rem;
+  }
+  .our-purpose > span {
+    font-size: 1.2rem;
+  }
+  /* game Funy Video Section */
+  .video-contents {
+    justify-content: center;
+  }
+
 }
 
 /* Small Laptops max-width:122px */
 @media screen and (min-width: 992.2px) and (max-width: 1128px) {
-  body {
-    padding: 0 20px;
-  }
   /* Nav menu */
+  .nav-container {
+    margin: 0 15px;
+  }
   .logo-text {
     font-size: 2.2rem;
   }
@@ -211,7 +342,7 @@
 
   /* Banner Section */
   .banner {
-    margin-bottom: 50px;
+    min-height: auto;
     background-image: none;
   }
   .banner-content-container {
@@ -226,7 +357,7 @@
     align-items: center;
   }
   .banner-content {
-    padding: 0 8%;
+    padding: 0 5%;
   }
 
   .banner-image {
@@ -235,19 +366,38 @@
   .banner-image > img {
     width: 100%;
   }
+  /* We are Gamer Section */
 
+  .gamer-banner-image {
+    flex: 0 0 50%;
+  }
 
+  .gamer-banner-content-container {
+    flex: 0 0 50%;
+    text-align: right;
+    padding: 0 5%;
+  }
+  .our-purpose {
+    font-size: 1.4rem;
+    line-height: 2rem;
+  }
+  .our-purpose > span {
+    font-size: 1.5rem;
+  }
+  /* game Funy Video Section */
+  .video-contents {
+    justify-content: center;
+  }
 
 }
 /* large laptop / Desktop  max-width: 1440px*/
 @media screen and (min-width: 1128.2px) and (max-width: 1440px) {
-  body {
-    padding: 0 20px;
+  .nav-container {
+    margin: 0 20px;
   }
-
   /* Banner Section */
   .banner {
-    margin-bottom: 50px;
+    min-height: auto;
     background-image: none;
   }
   .banner-content-container {
@@ -274,6 +424,20 @@
     width: 100%;
   }
 
+  /*----- Main Content Section Start Here----- */
+  /* We are gammer Section */
+  .gamer-banner-image {
+    flex: 0 0 50%;
+  }
 
+  .gamer-banner-content-container {
+    flex: 0 0 50%;
+    text-align: right;
+    padding: 0 5%;
+  }
 
+    /* game Funy Video Section */
+    .video-contents {
+      justify-content: center;
+    }
 }
