--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -488,6 +488,7 @@
   width: 270px;
   padding: 10px;
   border-radius: 50px;
+  border: 2px solid transparent;
   transition: all 0.3s;
 }
 .catagory-item a {
@@ -496,6 +497,7 @@
   justify-content: center;
   gap: 1rem;
   text-decoration: none;
+
   font-size: 1rem;
   font-weight: 600;
   color: var(--text-black);
